--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -9,9 +9,9 @@
 		<header style="background-color: #ff0000; height: 70px; width: 100%;">
 		
 		</header>
-		<div style="height: 100%;"> </div>
+		<div style="height: calc(100vh - 130px);"> </div>
 		<footer style="background-color: #00ff00; height: 60px; width: 100%;">
-			<p style="margin: 0 43%; text-align: center; padding: 20px 0; width: 10%; border: 0px">Best School</p>
+			<p style="margin: 0 auto; text-align: center; padding: 20px 0; width: 10%; border: 0px">Best School</p>
 		</footer>
 	</body>
 </html>
